--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+
+@layer base {
+    [x-cloak] { display: none !important; }
+}
+
 @layer components {
     .btn-primary {
         @apply bg-accent text-white font-medium px-6 py-3 rounded-full hover:bg-pink-400 transition;
@@ -18,6 +23,5 @@
     .card {
         @apply bg-white p-6 rounded-lg shadow hover:shadow-md transition;
     }
-
 
 }
